Adicionado injeção de dependência com tsyringe e refatoração do código
